# GraterliaOS-OpenPLi

./: .gitignore  configure.ac  mytest.py  skin.py
data/: keymap.xml  keymap_herpoi.xml  menu.xml  setup.xml  skin_subtitles.xml  startwizard.xml
data/fonts/: Makefile.am
data/rc_models/: Makefile.am  nbox.xml  rc_models.cfg  spark.xml
lib/: Makefile.am
lib/base/: buffer.cpp  filepush.cpp  freesatv2.cpp  smartptr.h
lib/driver/: rc.cpp  vfd.cpp  vfd.h
lib/dvb/: db.cpp  decoder.cpp  demux.cpp  dvb.cpp  dvb.h  dvbtime.cpp  epgcache.cpp  epgcache.h  esection.cpp  esection.h  fbc.cpp  fbc.h  filepush.cpp  frontend.cpp  idvb.h  pesparse.cpp  pmt.cpp  scan.cpp  sec.h  subtitle.cpp  subtitle.h  teletext.cpp  tstools.cpp  tstools.h  volume.cpp  volume.h
lib/dvb_ci/: dvbci.cpp  dvbci_resmgr.cpp
lib/gdi/: accel.cpp  fb.cpp  fb.h  font.cpp  gfbdc.cpp  glcddc.cpp  glcddc.h  gpixmap.cpp  lcd.cpp  picload.cpp
lib/python/: enigma_python.i
lib/python/Components/: About.py  ConfigList.py  EpgList.py  FanControl.py  Harddisk.py  (+12 more)
lib/python/Plugins/SystemPlugins/: Makefile.am
lib/python/Plugins/SystemPlugins/CEC/: Makefile.am  plugin.py
lib/python/Plugins/SystemPlugins/HdmiCEC/: plugin.py
lib/python/Plugins/SystemPlugins/NetworkBrowser/po/: go_po_to_mo
lib/python/Plugins/SystemPlugins/Videomode/: VideoHardware.py  plugin.py
lib/service/: Makefile.inc  listboxservice.cpp  servicedvb.cpp  servicedvbrecord.cpp  serviceeplayer3.h  servicemp3.cpp  servicemp3.h
main/: Makefile.am  bsod.cpp  enigma.cpp  version_info.cpp
po/: Makefile.am  lv.po  pl.po  ru.po
(+26 files in other folders)
