installdir = $(pkgdatadir)/rc_models

dist_install_DATA = \
	rc_models.cfg \
	dmmadv.png  et4x00.png  et8000.png  et9x00.png  vu.png        xp1000.png \
	dmm.png     et6x00.png  et9500.png  vuduo2.png  vuultimo.png  et7x00.png    formuler1.png \
	hd2400.png  hd1100.png 	xsarius.xml  xsarius.png\
	nbox.xml	nbox.png	spark.xml	spark.png

